--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,7 +14,7 @@ sidebar:
     # Sidebar links
     email: binod083@gmail.com
     phone: 9813364044
-    linkedin: alandoe
+    linkedin: khatribinod
 
     languages:
       - idiom: English
@@ -57,7 +57,7 @@ experiences:
         - Assign and solve the Client Issue to team and lead discussion and
           communication.
         - Managed SAAS development architecture in application in Azure
-        - ManagedcSAP Solutions and Integration, Added knowledge on
+        - Managed SAP Solutions and Integration, Added knowledge on
           Logistic process Had knowledge with Total Quality Management
           process
         - Worked Total Quality management web application that has
@@ -113,16 +113,23 @@ skills:
 
     toolset:
       - name: .Net 
-        level: 98%
+        level: 70%
 
       - name: Angular
-        level: 85%
+        level: 65%
 
       - name: SQL
-        level: 75%
+        level: 55%
 
       - name: Azure DevOps
-        level: 75%
+        level: 65%
+      
+      - name: SharePoint
+        level: 60%
+
+      - name: SAP
+        level: 55%
+
 
 footer: >
     
